--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,24 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "src/dist/server.js",
+  "scripts": {
+    "build-ts": "tsc",
+    "start": "npm run serve",
+    "serve": "node dist/server.js",
+    "watch-node": "nodemon dist/server.js",
+    "watch-ts": "tsc -w"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.16.4",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.7.0",
+    "typescript": "^3.4.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.1",
+    "@types/sequelize": "^4.27.48",
+    "nodemon": "^1.18.11"
+  }
 }
