--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "mysql2": "^1.6.5",
     "sequelize": "^5.7.0",
     "typescript": "^3.4.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.16.1",
     "@types/sequelize": "^4.27.48",
     "nodemon": "^1.18.11"
