--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.1"
 services:
   app:
+    container_name: ticket-project
     image: ticket-project/node
     ports:
       - "3000:3000"
