--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
   mysql:
     image: mysql:8
     restart: always
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
     volumes:
       - mysql-data:/var/lib/mysql
     networks:
