--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,11 @@ services:
     depends_on:
       - mysql
   mysql:
-    image: mysql:8
+    image: mysql:5.7
     restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=ticket_project_development
     volumes:
       - mysql-data:/var/lib/mysql
     networks:
