added jwt. errors type. added the enrollment number to the user model

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,7 +12,7 @@
       "@models/*": ["./src/models/*"],
       "@utils/*": ["./src/utils/*"],
       "@modules/*": ["./src/modules/*"],
-      "@types/*": ["./src/interfaces/*"]
+      "@interfaces/*": ["./src/interfaces/*"]
     }
   },
   "include": ["src/**/*"],
