--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
