--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,7 +11,8 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.1.0",
-    "react-navigation": "^3.9.1"
+    "react-navigation": "^3.9.1",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
