--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -25,9 +27,11 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
     "@types/jsonwebtoken": "^8.3.2",
+    "@types/method-override": "^0.0.31",
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
     "@types/sequelize": "^4.27.48",
