--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-qrcode": "^0.2.7",
     "react-navigation": "^3.9.1",
     "styled-components": "^4.2.0"
   },
