--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "paypal-rest-sdk": "^1.8.1",
     "sequelize": "^5.7.0",
     "typescript": "^3.4.4"
   },
