--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,8 +10,12 @@
     "@react-native-community/async-storage": "^1.3.4",
     "react": "16.8.3",
     "react-native": "0.59.5",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-modal": "^11.0.1",
+    "react-native-numeric-input": "^1.8.0",
     "react-native-qrcode": "^0.2.7",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
     "styled-components": "^4.2.0"
   },
