--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,7 +17,7 @@
     "react-native-qrcode": "^0.2.7",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
-    "styled-components": "^4.2.0"
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
