--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "passport-jwt": "^4.0.0",
     "paypal-rest-sdk": "^1.8.1",
     "sequelize": "^5.7.0",
+    "socket.io": "^2.2.0",
     "typescript": "^3.4.4"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/passport-jwt": "^3.0.1",
     "@types/paypal-rest-sdk": "^1.7.4",
     "@types/sequelize": "^4.27.48",
+    "@types/socket.io": "^2.1.2",
     "nodemon": "^1.18.11"
   }
 }
