--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^3.4.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.2",
+    "express-socket.io-session": "^1.3.5",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
@@ -29,9 +32,12 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.10",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
+    "@types/express-session": "^1.15.12",
+    "@types/express-socket.io-session": "^1.3.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/method-override": "^0.0.31",
     "@types/passport": "^1.0.0",
